--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,9 +1,21 @@
+:root {
+  --green-colour: rgb(74, 161, 119);
+  --green-light-colour: rgb(87, 176, 133);
+  --grey-dark-colour: rgb(225, 225, 225, .447);
+  --grey-light-colour: rgb(234, 234, 234);
+  --grey-moredark-colour:rgba(210, 210, 210);
+  --white-colour: rgb(255, 255, 255);
+}
+
+* {
+  box-sizing: border-box;
+}
+
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background-color: #fafafa;
-  color: #212121;
-  line-height: 1.5;
+  font-family: -apple-system, BlinkMacSystemFont,
+  'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+  'Open Sans', 'Helvetica Neue', sans-serif;
+  margin: 0;
 }
 
 a {
@@ -14,59 +26,63 @@ p {
   margin: 0;
 }
 
-.btn-load-more.is-hidden {
-  display: none;
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
-.container {
+img {
+  display: block;
+  max-width: 100%;
+}
+
+.header-container {
+  width: 100%;
+  padding: 10px 0;
+  position: fixed;
+  background-color: var(--grey-dark-colour); 
+}
+
+.search-form {
   display: flex;
   justify-content: center;
-  align-items: center;
-  border-radius: 1px;
-  background-color: rgba(225, 225, 225, 0.448);
-  height: 50px;
+  gap: 4px;
 }
 
-.search-inpute {
-  height: 25px;
-  width: 200px;
-  padding-left: 6px;
-  display: inline-block;
+.search-form input {
+  font-weight: 400;
+  font-size: 12px;
+  min-width: 20%;  
+  border: none;
+  background-color: var(--white-colour);
+  padding: 6px;
+  margin: 0;
 }
 
-.submit-btn {
-  text-align: center;
-  padding: 5px;
-  height: 30px;
-  color: #2d3043;
+.search-form button {
+  border: none;
+  background-color: var(--grey-light-colour);
+  padding: 8px;
+  border-radius: 2px;
+  margin: 0;
   cursor: pointer;
 }
 
-.submit-btn:hover {
-  font-weight: 700;
-  background-color: rgba(210, 210, 210, 0.787);
+.search-form button:hover {  
+  background-color: var(--grey-moredark-colour);
+}
+
+.gallery-container {
+  padding-top: 65px;
 }
 
 .gallery,
 .info {
   display: flex;
   flex-wrap: wrap;
-}
-
-.gallery {
-  margin-left: -20px;
-  padding-top: 60px;
   justify-content: center;
-}
-
-.gallery__link {
-  margin-top: 20px;
-  margin-left: 20px;
-  min-width: 320px;
-  flex-basis: calc((100% - 80px) / 4);
-  border: 2px solid rgb(241, 238, 238);
-  overflow: hidden;
-  transition: all 0.3s;
+  gap: 10px;
 }
 
 .gallery-item {
@@ -76,9 +92,13 @@ p {
 }
 
 .gallery-item__img {
-  display: block;
-  height: 30vh;
-  object-fit: cover;
+  height: 200px;
+  object-fit: cover;  
+}
+
+.gallery__link {
+  min-width: 320px;
+  border: 1px solid var(--grey-dark-colour);
 }
 
 .info {
@@ -91,21 +111,69 @@ p {
   flex-direction: column;
   align-items: center;
   color: black;
+  font-weight: 400;
+  font-size: 12px;
 }
 
-.info-item:not(:first-child) {
-  margin-left: 5px;
+.load-more.is-hidden,
+.load-end.is-hidden {
+  display: none;
 }
 
-.btn-load-more {
-  text-align: center;
-  padding: 5px;
-  height: 30px;
-  color: #2d3043;
+.load-more {
+  display: block;
+  margin: 20px auto;
+  padding: 8px 20px;
+  border: none;
+  color: var(--white-colour);
+  font-size: 14px;
+  border-radius: 1px;
+  background-color: var(--green-colour);
   cursor: pointer;
 }
 
-.btn-load-more:hover {
-  font-weight: 700;  
-  background-color: rgba(210, 210, 210, 0.787);
+.load-more:hover {
+  background-color: var(--green-light-colour);
+}
+
+.load-end {
+  display: flex;
+  height: 50px;
+  
+  justify-content: center;
+  align-items: center;
+  margin: 40px auto 0 auto;
+  padding: 8px 20px;
+  background-color: var(--green-colour);
+  color: var(--white-colour);
+  font-size: 14px;  
+}
+
+.btn-up {
+  width: 50px;
+  height: 50px;
+  display: none;
+  position: fixed;
+  bottom: 80px;
+  right: 35px;
+  z-index: 40;  
+
+  align-items: center;
+  justify-content: center;
+
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url(../images/arrows.png);
+
+  background-color: var(--green-colour);
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  color: var(--white-colour);
+  font-size: 16px;
+}
+
+.btn-up:hover {
+  background-color: var(--green-light-colour);
 }
